--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
             cd CRM_server && git pull
             cd ..
             echo "Restarting Docker Compose stack..."
-            docker compose down
-            docker compose up --build -d
-            docker image prune -f
+            sudo docker compose down
+            sudo docker compose up --build -d
+            sudo docker image prune -f
           EOF
